# performance-calculator

./: .gitignore  LICENSE  README.md  pyproject.toml
performance_calculator/: __init__.py
performance_calculator/models/: difficulty.py  mods.py  oppai.py  performance.py  score.py
performance_calculator/rulesets/catch/: difficulty.py  performance.py
performance_calculator/rulesets/mania/: difficulty.py  performance.py
performance_calculator/rulesets/osu/: difficulty.py  performance.py
performance_calculator/rulesets/taiko/: difficulty.py  performance.py
tests/: catch_performance.py  mania_performance.py  osu_performance.py  taiko_performance.py
