[tool.poetry]
name = "performance_calculator"
version = "0.1.0"
description = "A tool to calculate the performance of osu! plays"
authors = ["tsunyoku"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.dev-dependencies]
pre-commit = ">=2.20.0"
black = ">=22.8.0"
pytest = ">=7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
